2023. 6.26. Modified some examples to conform with the latest version (thanks to Daishi Kaneta). [example]
2023. 6.26. Modified labels in _zPH3DFReadSTL_BinVec (thanks to Daishi Kaneta). [zeo_ph_stl]
2023. 6.24. Debugged zeo.h to include zeo_mapnet.h. [zeo]
2023. 6.24. Debugged zVec3DOrthoNormal. [zeo_vec3d]
2023. 6.22. Added a test for zAAError and zAACascade. [test]
2023. 6.21. Separated config and libinfo. [all]
2023. 6. 2. Abolished _zShape3DOpticFPrint and _zShape3DTextureFPrint, and modified zShape3DFPrintZTK. [zeo_shape3d]
2023. 6. 1. Reflected modification of zeda-makefile-gen to keep zeo_export.h. [zeo_export]
2023. 5.25. Modified zCyl3DToPH, zCapsule3DToPH, and zCone3DToPH by using zVec3DOrthoNormal. [zeo_shape3d_cyl, zeo_shape3d_capsule, zeo_shape3d_cone]
2023. 5.25. Added zVec3DOrthoNormal. [zeo_vec3d]
2023. 5.25. Added zCapsule3D class. [zeo_shape3d_capsule, zeo_shape3d]
2023. 5.21. Modified _zOpticalInfoESRFromZTK, _zOpticalInfoSnsFromZTK, and _zOpticalInfoAlphaFromZTK to use zOpticalInfoSetESR, zOpticalInfoSetShininess, and zOpticalInfoSetAlpha, respectively. [zeo_render_optic]
2023. 5.21. Renamed _zOpticalInfoEsrFromZTK and _zOpticalInfoEsrFPrintZTK to _zOpticalInfoESRFromZTK and _zOpticalInfoESRFPrintZTK, respectively. [zeo_render_optic]
2023. 5.21. Added zOpticalInfoSetESR, zOpticalInfoSetShininess, and zOpticalInfoSetAlpha. [zeo_render_optic]
2023. 5.21. Removed register keywords. [app]
2023. 5.21. Corrected positions of __END_DECLS for C++ methods. [zeo_vec2d, zeo_vec3d, zeo_vec6d, zeo_mat3d, zeo_ep, zeo_frame3d]
2023. 5.20. Renamed labels for exceptions in zPH3DAlloc, zPH3DCreatePrism, zPH3DCreatePyramid, and zPH3DFReadSTL_BinVec. [zeo_ph, zeo_ph_stl]
2023. 5.20. Reflected new specification of ZDEF_STRUCT and ZDEF_UNION. [zeo_vec2d, zeo_vec3d, zeo_vec6d, zeo_mat3d, zeo_mat6d, zeo_ep, zeo_frame3d, zeo_ph, zeo_nurbs]
2023. 5.20. Reflected new specification of zeda-makefile-gen, and modified src/makefile. [src]