@@ -1,3 +1,3 @@
 PROJNAME=zeo
-VERSION=1.14.3
+VERSION=1.14.4
 DEPENDENCY="zeda=1.8.0;zm=1.8.0"
